SKIP_DATABASE_TESTS 환경변수가 설정된 경우, 장고 모델 사용하는 테스트는 skip

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
       fail-fast: false
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      SKIP_DATABASE_TESTS: true
 
     steps:
       - uses: actions/checkout@v4
