--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 ]
 dependencies = [
     "django>=4.0.0",
+    "django-environ",
     "django-lifecycle",
     "pgvector",
     "tiktoken",
