settings 설정 최적화 및 openai/anthropic/google llm 모듈 구현

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "django-lifecycle",
     "tiktoken",
     "openai",
+    "anthropic",
+    "google-genai",
 ]
 
 [project.optional-dependencies]
