--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "openai",
     "anthropic",
     "google-genai",
+    "rich",
+    "typer",
 ]
 
 [project.optional-dependencies]
@@ -43,6 +45,9 @@ Documentation = "https://ai.pyhub.kr"
 Repository = "https://github.com/pyhub-kr/django-pyhub-rag"
 Issues = "https://github.com/pyhub-kr/django-pyhub-rag/issues"
 # Changelog = "https://github.com/pyhub-kr/django-pyhub-rag/blob/main/CHANGELOG.md"
+
+[project.scripts]
+pyhub-rag = "pyhub.rag.__main__:app"
 
 [build-system]
 requires = ["hatchling"]
