--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ Issues = "https://github.com/pyhub-kr/django-pyhub-rag/issues"
 # Changelog = "https://github.com/pyhub-kr/django-pyhub-rag/blob/main/CHANGELOG.md"
 
 [project.scripts]
+"pyhub.llm" = "pyhub.llm.__main__:app"
 "pyhub.rag" = "pyhub.rag.__main__:app"
 
 [build-system]
