--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+parser = ["pypdf2", "PyCryptodome", "pillow", "httpx"]
 dev = ["pre_commit", "black", "isort", "ruff", "djlint"]
 build = ["setuptools", "wheel", "build", "twine"]
 postgres = ["psycopg2-binary", "pgvector"]
