--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,15 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-parser = ["pypdf2", "PyCryptodome", "pillow", "httpx"]
 dev = ["pre_commit", "black", "isort", "ruff", "djlint"]
 build = ["setuptools", "wheel", "build", "twine"]
+test = ["pytest", "pytest-django", "pytest-testdox", "pytest-asyncio"]
 postgres = ["psycopg2-binary", "pgvector"]
 sqlite = ["sqlite-vec", "numpy"]
 web = ["django-shinobi", "uvicorn"]
-test = ["pytest", "pytest-django", "pytest-testdox", "pytest-asyncio"]
+parser = ["pypdf2", "PyCryptodome", "pillow", "httpx"]
+
+all = ["django-pyhub-rag[dev,build,test,postgres,sqlite,web,parser]"]
 
 [project.urls]
 Homepage = "https://github.com/pyhub-kr/django-pyhub-rag"
