BaseLLM 및 AnthropicLLM 클래스의 파일 처리 유형으로 Path 타입 추가
- pyproject.toml 파일에 "httpx"와 "pillow" 의존성 추가
- GoogleLLM 및 OpenAIMixin 클래스에도 동일한 파일 인수 유형 개선 적용
- encode_files() 함수에서 파일 인수 유형을 업데이트하고 JPEG 최적화 기능 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "anthropic",
     "google-genai",
     "ollama",
+    "httpx",
+    "pillow",
     "rich",
     "typer",
 ]
@@ -40,7 +42,7 @@ test = ["pytest", "pytest-django", "pytest-testdox", "pytest-asyncio"]
 postgres = ["psycopg2-binary", "pgvector"]
 sqlite = ["sqlite-vec", "numpy"]
 web = ["django-shinobi", "uvicorn"]
-parser = ["pypdf2", "PyCryptodome", "pillow", "httpx"]
+parser = ["pypdf2", "PyCryptodome"]
 
 all = ["django-pyhub-rag[postgres,sqlite,web,parser]"]
 
