image를 설명하는 LLM describe_images, describe_images_async 메서드 구현

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "django>=4.0.0",
     "django-environ",
     "django-lifecycle",
+    "django-debug-toolbar",
     "tiktoken",
     "openai",
     "anthropic",
