--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ Issues = "https://github.com/pyhub-kr/django-pyhub-rag/issues"
 "pyhub.llm" = "pyhub.llm.__main__:app"
 "pyhub.rag" = "pyhub.rag.__main__:app"
 "pyhub.parser" = "pyhub.parser.__main__:app"
+"pyhub.web" = "pyhub.web.__main__:app"
 
 [build-system]
 requires = ["hatchling"]
