--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "rich",
     "typer",
     "colorlog",
+    "toml",  # 3.10 지원
 ]
 
 [project.optional-dependencies]
@@ -65,6 +66,7 @@ Issues = "https://github.com/pyhub-kr/django-pyhub-rag/issues"
 "pyhub.rag" = "pyhub.rag.__main__:app"
 "pyhub.parser" = "pyhub.parser.__main__:app"
 "pyhub.web" = "pyhub.web.__main__:app"
+"pyhub" = "pyhub._main__:app"
 
 [build-system]
 requires = ["hatchling"]
