mkdocs-glightbox 라이브러리 적용

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ parser = ["pypdf2", "PyCryptodome"]
 docs = [
     "mkdocs",
     "mkdocs-material",
+    "mkdocs-glightbox",
     "pymdown-extensions",
 ]
 
