pyhub.web 명령 추가 : print-settings (Feat. django-extensions)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "django-environ",
     "django-lifecycle",
     "django-debug-toolbar",
+    "django-extensions",
     "tiktoken",
     "openai",
     "anthropic",
