django-rich/django-typer를 활용한 명령 모듈 개선

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "django-cotton",
     "django-crispy-forms",
     "django-htmx",
+    "django-rich",
+    "django-typer[rich]",
     "django-template-partials",
     "cotton-heroicons",  # https://github.com/snopoke/cotton-heroicons
     "crispy-tailwind",
