--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
 # - LLM: llm.md
 # - Blog:
 #   - blog/index.md
+  - sessions/20250531-django-pyhub-rag-feat-upstage/index.md
   - handsonlab.md
   - release-notes/index.md
 
